@@ -442,6 +442,7 @@ a:hover {
     border-width:2px;
     border-color: #394048;
     margin: 2px;
+    background:url(images/loader.gif) no-repeat center;
 }
 
 /* pseudo-classes for image links */
